# machine-check

./: README.md  default.nix  machine-check.cabal  machine-check.nix  sample.config
app/: Main.hs
nix/: data-prometheus.nix
src/System/: Check.hs
src/System/Check/: Bird.hs  Config.hs  DNS.hs  Runner.hs  Types.hs  ZFS.hs
src/System/Check/ZFS/: List.hs  Status.hs  Types.hs
test/: BirdParseSpec.hs  ParseSpec.hs  SpecHelper.hs  ZpoolParseSpec.hs
test/samples/: bird0  bird1  bird2  zpool_status_backuper  zpool_status_devnode  zpool_status_nasbox  zpool_status_pgnd  zpool_status_stg
